# smart-loadshedding-advisor

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  pyproject.toml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: c70af81ea8f2_initial_tables.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: deps.py  models.py  session.py
apps/api/app/routers/: advisor.py  eskom_stub.py
apps/api/app/services/: cache_service.py  eskom_client.py
apps/ui/: app.py  ui_footer.py
apps/ui/pages/: 1_Terms_Conditions.py  2_About.py
docker/: api.Dockerfile  ui.Dockerfile
scripts/: dev_api.sh  dev_ui.sh  railway_start.sh
