[project]
name = "smart-loadshedding-advisor"
version = "0.1.0"
description = "Smart Loadshedding Advisor scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "streamlit>=1.37.0",
  "requests>=2.32.0",
  "langchain>=0.2.0",
  "openai>=1.35.0",
]

[tool.uv]
package = false
